// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Positioner renders on the bottom on the target 1`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  height: 10px;
  width: 10px;
}

.emotion-2 {
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transform: translate(-50%,0);
  -ms-transform: translate(-50%,0);
  transform: translate(-50%,0);
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
  </div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-1"
      data-test-id="element"
    />
  </div>
</body>
`;

exports[`Positioner renders on the bottomLeft on the target 1`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-2 {
  position: absolute;
  left: 0;
  top: 0;
}

.emotion-1 {
  height: 10px;
  width: 10px;
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
  </div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-1"
      data-test-id="element"
    />
  </div>
</body>
`;

exports[`Positioner renders on the bottomRight on the target 1`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  height: 10px;
  width: 10px;
}

.emotion-2 {
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transform: translate(-100%);
  -ms-transform: translate(-100%);
  transform: translate(-100%);
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
  </div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-1"
      data-test-id="element"
    />
  </div>
</body>
`;

exports[`Positioner renders on the left on the target 1`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  height: 10px;
  width: 10px;
}

.emotion-2 {
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transform: translate(-100%,-50%);
  -ms-transform: translate(-100%,-50%);
  transform: translate(-100%,-50%);
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
  </div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-1"
      data-test-id="element"
    />
  </div>
</body>
`;

exports[`Positioner renders on the right on the target 1`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  height: 10px;
  width: 10px;
}

.emotion-2 {
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
  </div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-1"
      data-test-id="element"
    />
  </div>
</body>
`;

exports[`Positioner renders on the top on the target 1`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  height: 10px;
  width: 10px;
}

.emotion-2 {
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transform: translate(-50%,-100%);
  -ms-transform: translate(-50%,-100%);
  transform: translate(-50%,-100%);
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
  </div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-1"
      data-test-id="element"
    />
  </div>
</body>
`;

exports[`Positioner renders on the topLeft on the target 1`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  height: 10px;
  width: 10px;
}

.emotion-2 {
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transform: translate(0,-100%);
  -ms-transform: translate(0,-100%);
  transform: translate(0,-100%);
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
  </div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-1"
      data-test-id="element"
    />
  </div>
</body>
`;

exports[`Positioner renders on the topRight on the target 1`] = `
.emotion-0 {
  height: 50px;
  width: 50px;
}

.emotion-1 {
  height: 10px;
  width: 10px;
}

.emotion-2 {
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transform: translate(-100%,-100%);
  -ms-transform: translate(-100%,-100%);
  transform: translate(-100%,-100%);
}

<body>
  <div>
    <div
      class="emotion-0"
      data-test-id="target"
    />
  </div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-1"
      data-test-id="element"
    />
  </div>
</body>
`;
